Bug 479531 - "Select folder" dialogs are unable to navigate mounted NFS/CIFS/SMB folders
Summary: "Select folder" dialogs are unable to navigate mounted NFS/CIFS/SMB folders
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Open/save dialogs (other bugs)
Version First Reported In: 5.113.0
Platform: Neon Linux
: HI normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords: regression
: 477190 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-01-08 10:18 UTC by Paul Worrall
Modified: 2024-01-16 20:42 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.115
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2024-01-08 10:18:54 UTC
STEPS TO REPRODUCE
1. Open a "Select Folder" dialog, e.g. via System Settings => Session => Locations
2. Try to navigate a folder tree that is on an NFS share mounted on the local machine

OBSERVED RESULT
Unable to navigate the folders

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition. 
KDE Plasma Version: 5.91.90
KDE Frameworks Version: 5.248.0
Qt Version: 6.6.1
Graphics Platform: Wayland

(Also reproduced on Arch with Plasma 5.27.10)

ADDITIONAL INFORMATION
The "Open File" dialogs navigate NFS folders OK
There are no flatpack or snaps involved, applications are all from the distro's repositories
Comment 1 Nate Graham 2024-01-11 23:05:51 UTC
Looks like this'll be fixed by https://invent.kde.org/frameworks/kio/-/merge_requests/1536.
Comment 2 Alessandro Astone 2024-01-14 21:53:26 UTC
Git commit af3af80d30025711574d1ca450dc0aed9d44d7fd by Alessandro Astone.
Committed on 14/01/2024 at 22:37.
Pushed by aleasto into branch 'master'.

KDirModel: Allow expanding network directories in file picker again

Closes: https://invent.kde.org/frameworks/kio/-/issues/29

M  +1    -2    src/widgets/kdirmodel.cpp

https://invent.kde.org/frameworks/kio/-/commit/af3af80d30025711574d1ca450dc0aed9d44d7fd
Comment 3 Alessandro Astone 2024-01-14 21:57:10 UTC
Git commit bf0e3b26aaff723fa63e90e033287c67552c0845 by Alessandro Astone.
Committed on 14/01/2024 at 22:56.
Pushed by aleasto into branch 'kf5'.

KDirModel: Allow expanding network directories in file picker again

Closes: https://invent.kde.org/frameworks/kio/-/issues/29

M  +1    -2    src/widgets/kdirmodel.cpp

https://invent.kde.org/frameworks/kio/-/commit/bf0e3b26aaff723fa63e90e033287c67552c0845
Comment 4 Nate Graham 2024-01-16 20:42:59 UTC
*** Bug 477190 has been marked as a duplicate of this bug. ***