KDirModel: Allow expanding network directories in file picker again

Closes: https://invent.kde.org/frameworks/kio/-/issues/29

BUG: 479531